# nahpu

./: CONTRIBUTING.md  README.md  pubspec.yaml  scripts.py
android/app/: build.gradle.kts
db_schemas/: drift_schema_v6.json
db_schemas/drift_tables/: tables_v6.drift
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/screens/export/: bundle_project.dart  export_db.dart  export_pdf.dart  export_records.dart  export_report.dart
lib/screens/settings/: collevent_settings.dart  common.dart  settings.dart  site_settings.dart  specimen_settings.dart
lib/screens/shared/: common.dart  features.dart  fields.dart  file_operation.dart  forms.dart  media.dart
lib/services/: io_services.dart  media_services.dart  personnel_services.dart  site_services.dart
lib/services/database/: database.dart  database.g.dart  site_queries.dart  tables.drift
lib/services/export/: media_writer.dart
lib/services/providers/: sites.dart  sites.g.dart  validation.dart  validation.freezed.dart
lib/services/types/: controllers.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/styles/: themes.dart
linux/packaging/deb/: make_config.yaml
linux/packaging/rpm/: make_config.yaml
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs
scripts/: frb.sh
scripts/ps/: frb.ps1  update_rust.ps1  windows_setup.ps1
snap/: snapcraft.yaml
snap/gui/: nahpu.desktop
(+28 files in other folders)
